Added watch folders (#8) Only tested on win7 Supports single file rename, move and delete Does not support folder rename, multi-file move
Win7 sequences:
Create:
[            Watch8] DEBUG 2012-04-05 21:18:46.060 ENTRY_CREATE: C:\tmp\test (2011) - Copy.mkv
[            Watch8] DEBUG 2012-04-05 21:18:46.061 ENTRY_MODIFY: C:\tmp\test (2011) - Copy.mkv
[            Watch8] DEBUG 2012-04-05 21:19:49.779 ENTRY_MODIFY: C:\tmp\test (2011) - Copy.mkv

Move in same watch folder:
[            Watch9] DEBUG 2012-04-05 21:20:27.952 ENTRY_DELETE: C:\tmp\test (2011).mkv
[            Watch9] DEBUG 2012-04-05 21:20:27.953 ENTRY_CREATE: C:\tmp\tmp\test (2011).mkv
[            Watch9] DEBUG 2012-04-05 21:20:27.953 ENTRY_MODIFY: C:\tmp\tmp\test (2011).mkv
[            Watch9] DEBUG 2012-04-05 21:20:27.953 ENTRY_MODIFY: C:\tmp\tmp

Move to other watch folder:
[            Watch5] DEBUG 2012-04-06 16:11:47.533 ENTRY_CREATE: C:\tmp\test (2011).mkv
[            Watch5] DEBUG 2012-04-06 16:11:47.544 ENTRY_MODIFY: C:\tmp\test (2011).mkv
[            Watch5] DEBUG 2012-04-06 16:12:15.707 ENTRY_MODIFY: C:\tmp\test (2011).mkv
[            Watch0] DEBUG 2012-04-06 16:12:15.912 ENTRY_DELETE: D:\tmp\test (2011).mkv

Rename:
[            Watch7] DEBUG 2012-04-05 21:21:34.143 ENTRY_DELETE: C:\tmp\test (2011).mkv
[            Watch7] DEBUG 2012-04-05 21:21:34.144 ENTRY_CREATE: C:\tmp\test ().mkv
[            Watch7] DEBUG 2012-04-05 21:21:34.145 ENTRY_MODIFY: C:\tmp\test ().mkv

Delete:
[            Watch9] DEBUG 2012-04-05 21:22:02.921 ENTRY_DELETE: C:\tmp\test (2011).mkv

--- a/ps3mediaserver/src/main/java/net/pms/messages.properties
+++ b/ps3mediaserver/src/main/java/net/pms/messages.properties
@@ -729,7 +729,7 @@ ML.ManagedFoldersPanel.lFolderPath=Folder Path
 ML.ManagedFoldersPanel.lVideo=Import video
 ML.ManagedFoldersPanel.lAudio=Import audio
 ML.ManagedFoldersPanel.lPictures=Import photos
-ML.ManagedFoldersPanel.lWatch=Watch
+ML.ManagedFoldersPanel.lWatch=Watches the folder for changes and update the library automatically
 ML.ManagedFoldersPanel.lPlugins=Plugins
 
 ML.General.MessageType.WARNING=Warning
@@ -783,6 +783,7 @@ ML.OptionChooser.OptionType.TREE=Tree
 
 ML.Messages.VideoInserted=Inserted video:
 ML.Messages.VideoUpdated=Updated video:
+ML.Messages.VideoDeleted=Deleted video:
 ML.Messages.ScanFinished=Imported %s files
 ML.Messages.UpdateFinished=Updated %s files
 ML.Messages.CleanLibraryDone=Removed %s video, %s audio files and %s pictures from the library
